<?xml version="1.0" encoding="utf-8"?>
<resources>



    <string name="app_name">Share to Mopidy</string>
    <string name="action_configuration">Configuration</string>
    <string name="action_about">About</string>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connecting">Conecting&#8230;</string>

    <string name="error_connecting_title">Error connecting to mopidy</string>
    <string name="error_connecting_text">Check your configuration</string>

    <string name="no_track">No Track</string>
    <string name="open_configuration">Open configuration</string>

    <array name="configuration_pages">
        <item>Welcome</item>
        <item>Name</item>
        <item>Mopidy config</item>
        <item>IP</item>
        <item>Test</item>
    </array>

    <string name="configuration_welcome_message">Welcome!\n\nBefore using the app you need to configure mopidy and this app.\n\nThis tutorial will help you to get started.\n\nYou can swipe to move between the next or previous step.</string>
    <string name="configuration_mopidy_message">Change your mopidy config (~/.config/mopidy/mopidy.conf) and set:\n\n[http]\nenabled = true\nhostname = 0.0.0.0\nport = [portnumber]\n\nYou can choose the [portnumber] you want (default is 6680) but you must write it here:</string>
    <string name="configuration_name_message">Set a name to this server. You can set any name you want:</string>
    <string name="configuration_ip_message">Find the IP address where mopidy is running (ifconfig can be helpull) and write it here:</string>


    <string name="defaultName">My Mopidy Server</string>
    <string name="defaultIP">192.168.1.2</string>
    <string name="defaultPort">6680</string>
    <string name="add_server">+ Add new server</string>

    <string name="port">Port:</string>
    <string name="name">Name:</string>
    <string name="ip">IP:</string>
    <string name="next">Next</string>
    <string name="single_number">1</string>
    <string name="consume_text">C</string>

    <string name="try_again_button">Try again</string>
    <string name="finish_button">Finish</string>
    <string name="check_config">Check configuration</string>
    <string name="configuration_test_ok">Congratulations!\n\nThe app has connected to mopidy successfully.\n\nYou can now use the app.\n\nRemenber you can use the share button on spotify and select email, this app will show as an option.\n\nYou can also use Youtube share button</string>
    <string name="configuration_error">The test failed :(\n There was a problem connecting to mopidy:</string>

    <string name="about">About</string>

    <string name="ok">Ok</string>
    <string name="more_info">More info</string>
    <string name="more_info_url">https://docs.mopidy.com/en/latest/installation</string>
    <string name="old_mopidy">Mopidy version error</string>
    <string name="old_mopidy_message">Your mopidy version is outdated\nThis app needs mopidy 1.0.0 or newer to work (Your version is %s)\nPlease update mopidy</string>

    <string name="time">0:00</string>

    <string-array name="connected_fragments_title">
        <item>Tracklist</item>
        <item>Playlists</item>
        <item>Library</item>
        <item>Search</item>
    </string-array>

    <string name="added_to_tracklist">Added to tracklist</string>

    <string-array name="mopidy_data_options">
        <item>Add to tracklist</item>
        <item>Replace tracklist</item>
    </string-array>

    <string-array name="tracklist_tltrack_options">
        <item>Remove from tracklist</item>
    </string-array>

    <string name="available">Available</string>

</resources>
