<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/small_now_playing"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/primary_dark">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:id="@+id/small_album_art"
            android:layout_margin="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/small_track_name"
            android:layout_toRightOf="@+id/small_album_art"
            android:layout_toLeftOf="@+id/playPauseButtonSmallView"
            android:layout_toStartOf="@+id/playPauseButtonSmallView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/small_artist_name"
            android:layout_toRightOf="@+id/small_album_art"
            android:layout_below="@+id/small_track_name"
            android:layout_toLeftOf="@+id/playPauseButtonSmallView"
            android:layout_toStartOf="@+id/playPauseButtonSmallView"
            android:layout_alignParentBottom="true" />

        <ImageView
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:id="@+id/playPauseButtonSmallView"
            android:src="@drawable/ic_action_play"
            android:layout_toLeftOf="@+id/nextButtonSmallView"
            android:layout_toStartOf="@+id/nextButtonSmallView" />

        <ImageView
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:id="@+id/nextButtonSmallView"
            android:src="@drawable/ic_action_next"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="0dp">

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tracks_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/playback_controls">

    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primary_dark"
        android:layout_alignParentBottom="true"
        android:id="@+id/playback_controls">


        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_toRightOf="@+id/currenSeekPositionTextView"
            android:layout_toLeftOf="@+id/trackLenghtTextView" />

        <TableRow
            android:id="@+id/playback_controls_table"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/seekBar">



                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/repeatButton"
                    android:src="@drawable/ic_action_repeat"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:clickable="true"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/single_number"
                    android:id="@+id/singleButton"
                    android:layout_weight="1"/>




            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/previousButton"
                android:layout_weight="1.3"
                android:src="@drawable/ic_action_previous"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/playPauseButton"
                android:src="@drawable/ic_action_play"
                android:layout_weight="1.7"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/nextButton"
                android:src="@drawable/ic_action_next"
                android:layout_weight="1.3"/>


                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/shuffleButton"
                    android:src="@drawable/ic_action_shuffle"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/consume_text"
                    android:id="@+id/consumeButton"
                    android:layout_weight="1"/>




        </TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:gravity="center"
            android:id="@+id/currenSeekPositionTextView"
            android:layout_above="@+id/playback_controls_table"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time"
            android:id="@+id/trackLenghtTextView"
            android:layout_above="@+id/playback_controls_table"
            android:layout_alignRight="@+id/playback_controls_table"
            android:layout_alignParentTop="true" />

    </RelativeLayout>


    </RelativeLayout>

</LinearLayout>